--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="bg-light text-center py-5 border-top mt-auto">
   <div class="container">
-    <span class="text-muted">© NHS - Intel - UCL Project Ambience</span>
+    <span class="text-muted">© NHS - Intel - UCL LLMedic</span>
   </div>
 </footer>
