--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="position-relative" style="background-image: url(<%= asset_path('home.jpg') %>); background-size: cover; background-position: center; height: 400px;">
   <div class="position-absolute top-50 start-50 translate-middle bg-primary text-white p-4 p-md-5" style="max-width: 700px; border-radius: 6px;">
-    <h4 class="fw-bold">NHS Project Ambience</h4>
+    <h4 class="fw-bold">NHS LLMedic</h4>
     <h2 class="fw-bold mb-0">Ecosystem for fine-tuning LLMs<br>with local hospital data</h2>
   </div>
 </div>
